[gd_scene load_steps=8 format=3 uid="uid://b6k6baalu42w7"]

[ext_resource type="Script" path="res://src/battlefield_outdoors/battlefield_outdoors_hud/battlefield_outdoors_hud.gd" id="1_3j823"]
[ext_resource type="PackedScene" uid="uid://da57hkojchohp" path="res://src/shared_ui/resource_display/health_display.tscn" id="2_6fssr"]
[ext_resource type="LabelSettings" uid="uid://2bu6p3hkt8lk" path="res://assets/label_settings/ColorWarning.tres" id="2_p0vkd"]
[ext_resource type="PackedScene" uid="uid://cnbbp4gy833n" path="res://src/shared_ui/resource_display/money_display.tscn" id="2_ualkn"]
[ext_resource type="PackedScene" uid="uid://cjb6144n5q1b1" path="res://src/shared_ui/resource_display/fuel_display.tscn" id="3_n5xb3"]
[ext_resource type="PackedScene" uid="uid://cib1fq003l5jx" path="res://src/indoor_preparation/screen_displays/shared/screen_notification.tscn" id="3_rl23t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8a5xg"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[node name="BattlefieldOutdoorsHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3j823")

[node name="TopBar" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Trackers" type="VBoxContainer" parent="TopBar"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HealthDisplay" parent="TopBar/Trackers" instance=ExtResource("2_6fssr")]
layout_mode = 2

[node name="MoneyDisplay" parent="TopBar/Trackers" instance=ExtResource("2_ualkn")]
layout_mode = 2
size_flags_horizontal = 0

[node name="FuelDisplay" parent="TopBar/Trackers" instance=ExtResource("3_n5xb3")]
layout_mode = 2
size_flags_horizontal = 0

[node name="BottomInfoDisplay" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="CrewMemberSelector" type="PanelContainer" parent="BottomInfoDisplay"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="BottomInfoDisplay/CrewMemberSelector"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="GridContainer" type="GridContainer" parent="BottomInfoDisplay/CrewMemberSelector/MarginContainer"]
layout_mode = 2
columns = 3

[node name="Button" type="Button" parent="BottomInfoDisplay/CrewMemberSelector/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
disabled = true

[node name="Button2" type="Button" parent="BottomInfoDisplay/CrewMemberSelector/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
disabled = true

[node name="Button3" type="Button" parent="BottomInfoDisplay/CrewMemberSelector/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
disabled = true

[node name="Button4" type="Button" parent="BottomInfoDisplay/CrewMemberSelector/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
disabled = true

[node name="Button5" type="Button" parent="BottomInfoDisplay/CrewMemberSelector/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
disabled = true

[node name="Button6" type="Button" parent="BottomInfoDisplay/CrewMemberSelector/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
disabled = true

[node name="Button7" type="Button" parent="BottomInfoDisplay/CrewMemberSelector/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
disabled = true

[node name="Button8" type="Button" parent="BottomInfoDisplay/CrewMemberSelector/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
disabled = true

[node name="Button9" type="Button" parent="BottomInfoDisplay/CrewMemberSelector/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
disabled = true

[node name="Center" type="VBoxContainer" parent="BottomInfoDisplay"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 0

[node name="TopEdgeButtons" type="Control" parent="BottomInfoDisplay/Center"]
z_index = 1
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="BottomInfoDisplay/Center/TopEdgeButtons"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_8a5xg")

[node name="PanelTitle" type="Label" parent="BottomInfoDisplay/Center/TopEdgeButtons/PanelContainer"]
layout_mode = 2
text = "Crew Status"

[node name="MockRerollButton" type="Button" parent="BottomInfoDisplay/Center/TopEdgeButtons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -54.0
offset_right = 55.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Reroll
(Costs 1 Fuel)"

[node name="FuelDisplay" parent="BottomInfoDisplay/Center/TopEdgeButtons" instance=ExtResource("3_n5xb3")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85
anchor_top = 1.0
anchor_right = 0.85
anchor_bottom = 1.0
offset_left = -150.0
offset_bottom = 0.0
grow_vertical = 0

[node name="CrewStatus" type="PanelContainer" parent="BottomInfoDisplay/Center"]
custom_minimum_size = Vector2(680, 200)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 10

[node name="HB" type="HBoxContainer" parent="BottomInfoDisplay/Center/CrewStatus"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="CrewActionsDisplay" type="MarginContainer" parent="BottomInfoDisplay/Center/CrewStatus/HB"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PC" type="PanelContainer" parent="BottomInfoDisplay/Center/CrewStatus/HB/CrewActionsDisplay"]
layout_mode = 2

[node name="CalculationsDisplay" type="MarginContainer" parent="BottomInfoDisplay/Center/CrewStatus/HB"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PC" type="PanelContainer" parent="BottomInfoDisplay/Center/CrewStatus/HB/CalculationsDisplay"]
layout_mode = 2

[node name="TotalPowerDisplay" type="MarginContainer" parent="BottomInfoDisplay/Center/CrewStatus/HB"]
clip_contents = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PanelContainer" type="PanelContainer" parent="BottomInfoDisplay/Center/CrewStatus/HB/TotalPowerDisplay"]
layout_mode = 2

[node name="BarrierPreview" type="PanelContainer" parent="BottomInfoDisplay"]
custom_minimum_size = Vector2(275, 275)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8

[node name="CentralControls" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CentralControls"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CentralControls"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="CentralControls/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MockAttackButton" type="Button" parent="CentralControls/VBoxContainer/Buttons"]
layout_mode = 2
text = "Charge!"

[node name="Warnings" type="MarginContainer" parent="CentralControls/VBoxContainer"]
layout_mode = 2

[node name="WarningOnlyFrozenTroops" type="Label" parent="CentralControls/VBoxContainer/Warnings"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Buy or unfreeze troops before rolling."
label_settings = ExtResource("2_p0vkd")
horizontal_alignment = 1

[node name="WarningOutOfHealth" type="Label" parent="CentralControls/VBoxContainer/Warnings"]
visible = false
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1

[node name="WarningOutOfTroops" type="Label" parent="CentralControls/VBoxContainer/Warnings"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Buy troops before rolling."
label_settings = ExtResource("2_p0vkd")
horizontal_alignment = 1

[node name="ScreenNotification" parent="." instance=ExtResource("3_rl23t")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_bottom = 0.3

[node name="GoInsideButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -4.0
offset_right = 4.0
offset_bottom = 8.0
grow_horizontal = 2
text = "Manage Crew
Inside "

[connection signal="pressed" from="BottomInfoDisplay/Center/TopEdgeButtons/MockRerollButton" to="." method="_on_mock_reroll_button_pressed"]
[connection signal="pressed" from="CentralControls/VBoxContainer/Buttons/MockAttackButton" to="." method="_on_mock_attack_button_pressed"]
